# joker-clef

./: APPROACH_COMPARISON.md  PRESENTATION_PIPELINE.md  PROJECT_PIPELINE_EXPLAINED.md  README.md  joker_task1_retrieval_qrels_train25_EN.json  joker_task1_retrieval_queries_test25_EN.json  joker_task1_retrieval_queries_train25_EN.json  pyproject.toml
src/joker_task1/: __init__.py  cli.py  data.py  dense.py  features.py  fusion.py  gui.py  humor_classifier.py  rerank.py  retriever.py
