[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joker-clef-task1"
version = "0.4.0"
description = "Hybrid lexical + dense + humor-aware pipeline for CLEF JOKER 2025 Task 1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "transformers>=4.44",
  "sentence-transformers>=3.0",
  "faiss-cpu>=1.8.0",
  "scikit-learn>=1.5",
  "psutil>=5.9",
]

[project.scripts]
joker-task1 = "joker_task1.cli:main"
joker-task1-gui = "joker_task1.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
